--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -5,7 +5,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
         "-CertStorePath" = {
             description = "Used to specify which path within the CertStore should be checked."
             value = "$IcingaCheckCertificate_Object_CertStorePath$"
-            order = 8
+            order = 9
         }
         "-CriticalEnd" = {
             description = "Used to specify a Critical range for the end date of an certificate. In this case a string. Allowed units include: ms, s, m, h, d, w, M, y"
@@ -15,7 +15,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
         "-Verbosity" = {
             description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state 3: Identical to Verbose 2, but prints in addition the check package configuration e.g (All must be [OK])"
             value = "$IcingaCheckCertificate_Int32_Verbosity$"
-            order = 11
+            order = 12
         }
         "-CertSubject" = {
             description = "Used to specify an array of Subjects, which are used to determine what certificate to check, within the CertStore."
@@ -71,6 +71,28 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             set_if = "$IcingaCheckCertificate_Switchparameter_Trusted$"
             order = 99
         }
+        "-ExcludePattern" = {
+            description = "Used to specify an array of exclusions, tested against Subject, Subject Alternative Name and Issuer."
+            value = {{
+                var arr = macro("$IcingaCheckCertificate_Array_ExcludePattern$");
+                    if (len(arr) == 0) {
+                        return "@()";
+                    }
+                    return arr.map(
+                        x => if (typeof(x) == String) {
+                            var argLen = len(x);
+                            if (argLen != 0 && x.substr(0,1) == "'" && x.substr(argLen - 1, argLen) == "'") {
+                                x;
+                            } else {
+                                "'" + x + "'";
+                            }
+                        } else {
+                            x;
+                        }
+                    ).join(",");
+            }}
+            order = 8
+        }
         "-CertPaths" = {
             description = "Used to specify an array of paths on your system, where certificate files are. Use with CertName."
             value = {{
@@ -91,7 +113,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
                         }
                     ).join(",");
             }}
-            order = 9
+            order = 10
         }
         "-CertThumbprint" = {
             description = "Used to specify an array of Thumbprints, which are used to determine what certificate to check, within the CertStore."
@@ -139,7 +161,7 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
                         }
                     ).join(",");
             }}
-            order = 10
+            order = 11
         }
     }
     vars.IcingaCheckCertificate_Switchparameter_Recurse = false
