Fixes invalid Icinga 2 .conf files
Fix CheckCommand definitions #117

--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -27,9 +27,8 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckCPU_Switchparameter_NoPerfData = False
+    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
