--- a/config/icinga/Invoke-IcingaCheckCheckSum.conf
+++ b/config/icinga/Invoke-IcingaCheckCheckSum.conf
@@ -25,9 +25,8 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckCheckSum_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckCheckSum_Switchparameter_NoPerfData = False
+    vars.IcingaCheckCheckSum_Switchparameter_NoPerfData = false
 }
