--- a/config/icinga/Invoke-IcingaCheckDirectory.conf
+++ b/config/icinga/Invoke-IcingaCheckDirectory.conf
@@ -3,7 +3,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
 
     arguments += {
         "-Path" = {
-            description = "Used to specify a path. e.g. 'C:\Users\Icinga\Downloads'"
+            description = "Used to specify a path. e.g. 'C:\\Users\\Icinga\\Downloads'"
             value = "$IcingaCheckDirectory_String_Path$"
             order = 2
         }
@@ -23,7 +23,6 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckDirectory_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-ChangeYoungerThan" = {
@@ -78,7 +77,6 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
         "-Recurse" = {
             set_if = "$IcingaCheckDirectory_Switchparameter_Recurse$"
-            set_if_format = "string"
             order = 99
         }
         "-Warning" = {
@@ -87,6 +85,6 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 5
         }
     }
-    vars.IcingaCheckDirectory_Switchparameter_NoPerfData = False
-    vars.IcingaCheckDirectory_Switchparameter_Recurse = False
+    vars.IcingaCheckDirectory_Switchparameter_NoPerfData = false
+    vars.IcingaCheckDirectory_Switchparameter_Recurse = false
 }
