--- a/config/icinga/Invoke-IcingaCheckDiskHealth.conf
+++ b/config/icinga/Invoke-IcingaCheckDiskHealth.conf
@@ -18,7 +18,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-ExcludeDisk" = {
@@ -34,7 +33,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-IgnoreReadOnlyDisks" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks$"
-            set_if_format = "string"
             order = 99
         }
         "-IncludeDisk" = {
@@ -131,7 +129,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-CheckLogicalOnly" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly$"
-            set_if_format = "string"
             order = 99
         }
         "-DiskReadByteSecCritical" = {
@@ -146,7 +143,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-IgnoreOfflineDisks" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks$"
-            set_if_format = "string"
             order = 99
         }
         "-DiskWriteSecWarning" = {
@@ -165,8 +161,8 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 19
         }
     }
-    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = False
-    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = False
-    vars.IcingaCheckDiskHealth_Switchparameter_NoPerfData = False
-    vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = False
+    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = false
+    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = false
+    vars.IcingaCheckDiskHealth_Switchparameter_NoPerfData = false
+    vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = false
 }
