--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -9,7 +9,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckEventlog_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-IncludeMessage" = {
@@ -125,7 +124,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         }
         "-DisableTimeCache" = {
             set_if = "$IcingaCheckEventlog_Switchparameter_DisableTimeCache$"
-            set_if_format = "string"
             order = 99
         }
         "-Warning" = {
@@ -156,6 +154,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 12
         }
     }
-    vars.IcingaCheckEventlog_Switchparameter_NoPerfData = False
-    vars.IcingaCheckEventlog_Switchparameter_DisableTimeCache = False
+    vars.IcingaCheckEventlog_Switchparameter_NoPerfData = false
+    vars.IcingaCheckEventlog_Switchparameter_DisableTimeCache = false
 }
