--- a/config/icinga/Invoke-IcingaCheckFirewall.conf
+++ b/config/icinga/Invoke-IcingaCheckFirewall.conf
@@ -23,15 +23,13 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckFirewall_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Enabled" = {
             set_if = "$IcingaCheckFirewall_Switchparameter_Enabled$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckFirewall_Switchparameter_Enabled = False
-    vars.IcingaCheckFirewall_Switchparameter_NoPerfData = False
+    vars.IcingaCheckFirewall_Switchparameter_Enabled = false
+    vars.IcingaCheckFirewall_Switchparameter_NoPerfData = false
 }
