--- a/config/icinga/Invoke-IcingaCheckICMP.conf
+++ b/config/icinga/Invoke-IcingaCheckICMP.conf
@@ -29,7 +29,6 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
         "-IPv6" = {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv6$"
-            set_if_format = "string"
             order = 99
         }
         "-PacketSize" = {
@@ -39,7 +38,6 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckICMP_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Critical" = {
@@ -49,7 +47,6 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
         "-IPv4" = {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
-            set_if_format = "string"
             order = 99
         }
         "-CriticalPl" = {
@@ -62,7 +59,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 0
         }
     }
-    vars.IcingaCheckICMP_Switchparameter_NoPerfData = False
-    vars.IcingaCheckICMP_Switchparameter_IPv6 = False
-    vars.IcingaCheckICMP_Switchparameter_IPv4 = False
+    vars.IcingaCheckICMP_Switchparameter_NoPerfData = false
+    vars.IcingaCheckICMP_Switchparameter_IPv6 = false
+    vars.IcingaCheckICMP_Switchparameter_IPv4 = false
 }
