--- a/config/icinga/Invoke-IcingaCheckMemory.conf
+++ b/config/icinga/Invoke-IcingaCheckMemory.conf
@@ -27,7 +27,6 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckMemory_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-WarningPercent" = {
@@ -36,5 +35,5 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
             order = 5
         }
     }
-    vars.IcingaCheckMemory_Switchparameter_NoPerfData = False
+    vars.IcingaCheckMemory_Switchparameter_NoPerfData = false
 }
