--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -13,7 +13,6 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckNetworkInterface_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-LinkSpeedCrit" = {
@@ -68,7 +67,6 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
         }
         "-IncludeHidden" = {
             set_if = "$IcingaCheckNetworkInterface_Switchparameter_IncludeHidden$"
-            set_if_format = "string"
             order = 99
         }
         "-OutboundAvgBandUsageWarn" = {
@@ -231,6 +229,6 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 21
         }
     }
-    vars.IcingaCheckNetworkInterface_Switchparameter_IncludeHidden = False
-    vars.IcingaCheckNetworkInterface_Switchparameter_NoPerfData = False
+    vars.IcingaCheckNetworkInterface_Switchparameter_IncludeHidden = false
+    vars.IcingaCheckNetworkInterface_Switchparameter_NoPerfData = false
 }
