--- a/config/icinga/Invoke-IcingaCheckPerfcounter.conf
+++ b/config/icinga/Invoke-IcingaCheckPerfcounter.conf
@@ -29,7 +29,6 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckPerfcounter_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-C" = {
@@ -37,5 +36,5 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
             order = 0
         }
     }
-    vars.IcingaCheckPerfcounter_Switchparameter_NoPerfData = False
+    vars.IcingaCheckPerfcounter_Switchparameter_NoPerfData = false
 }
