--- a/config/icinga/Invoke-IcingaCheckProcessCount.conf
+++ b/config/icinga/Invoke-IcingaCheckProcessCount.conf
@@ -33,9 +33,8 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckProcessCount_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = False
+    vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = false
 }
