--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -19,7 +19,6 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-State" = {
@@ -39,5 +38,5 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 4
         }
     }
-    vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = False
+    vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
 }
