--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -14,7 +14,6 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckService_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Service" = {
@@ -44,5 +43,5 @@ object CheckCommand "Invoke-IcingaCheckService" {
             order = 0
         }
     }
-    vars.IcingaCheckService_Switchparameter_NoPerfData = False
+    vars.IcingaCheckService_Switchparameter_NoPerfData = false
 }
