--- a/config/icinga/Invoke-IcingaCheckStoragePool.conf
+++ b/config/icinga/Invoke-IcingaCheckStoragePool.conf
@@ -29,7 +29,6 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckStoragePool_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-FreeSpaceWarning" = {
@@ -48,7 +47,6 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
         }
         "-IncludePrimordial" = {
             set_if = "$IcingaCheckStoragePool_Switchparameter_IncludePrimordial$"
-            set_if_format = "string"
             order = 99
         }
         "-IncludeStoragePool" = {
@@ -114,6 +112,6 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             order = 6
         }
     }
-    vars.IcingaCheckStoragePool_Switchparameter_IncludePrimordial = False
-    vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = False
+    vars.IcingaCheckStoragePool_Switchparameter_IncludePrimordial = false
+    vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = false
 }
