--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -27,7 +27,6 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckTimeSync_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Critical" = {
@@ -47,10 +46,9 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
         }
         "-IPV4" = {
             set_if = "$IcingaCheckTimeSync_Switchparameter_IPV4$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = False
-    vars.IcingaCheckTimeSync_Switchparameter_IPV4 = False
+    vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = false
+    vars.IcingaCheckTimeSync_Switchparameter_IPV4 = false
 }
