--- a/config/icinga/Invoke-IcingaCheckUpdates.conf
+++ b/config/icinga/Invoke-IcingaCheckUpdates.conf
@@ -32,9 +32,8 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckUpdates_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
 }
