--- a/config/icinga/Invoke-IcingaCheckUptime.conf
+++ b/config/icinga/Invoke-IcingaCheckUptime.conf
@@ -18,7 +18,6 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUptime_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Verbosity" = {
@@ -26,5 +25,5 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
             order = 4
         }
     }
-    vars.IcingaCheckUptime_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUptime_Switchparameter_NoPerfData = false
 }
