--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -18,11 +18,10 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
         }
         "-IgnoreEmptyChecks" = {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks$"
-            set_if_format = "string"
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\','D:\'"
+            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\\','D:\\'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
                 if (len(arr) == 0) {
@@ -39,11 +38,10 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:\','D:\'"
+            description = "Used to specify an array of partitions to be excluded. e.g. 'C:\\','D:\\'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
                 if (len(arr) == 0) {
@@ -55,11 +53,10 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
         }
         "-SkipUnknown" = {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = False
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = False
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
 }
