--- a/config/icinga/Invoke-IcingaCheckUsers.conf
+++ b/config/icinga/Invoke-IcingaCheckUsers.conf
@@ -22,7 +22,6 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUsers_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Username" = {
@@ -37,5 +36,5 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
             order = 2
         }
     }
-    vars.IcingaCheckUsers_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUsers_Switchparameter_NoPerfData = false
 }
