--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -49,7 +49,6 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
         }
         "-Trusted" = {
             set_if = "$IcingaCheckCertificate_Switchparameter_Trusted$"
-            set_if_format = "string"
             order = 99
         }
         "-CertPaths" = {
@@ -76,7 +75,6 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
         }
         "-Recurse" = {
             set_if = "$IcingaCheckCertificate_Switchparameter_Recurse$"
-            set_if_format = "string"
             order = 99
         }
         "-CertName" = {
@@ -91,6 +89,6 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 10
         }
     }
-    vars.IcingaCheckCertificate_Switchparameter_Recurse = False
-    vars.IcingaCheckCertificate_Switchparameter_Trusted = False
+    vars.IcingaCheckCertificate_Switchparameter_Recurse = false
+    vars.IcingaCheckCertificate_Switchparameter_Trusted = false
 }
