--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -29,7 +29,6 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckStoragePool_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-FreeSpaceWarning" = {
@@ -48,7 +47,6 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
         }
         "-IncludePrimordial" = {
             set_if = "$IcingaCheckStoragePool_Switchparameter_IncludePrimordial$"
-            set_if_format = "string"
             order = 99
         }
         "-IncludeStoragePool" = {
@@ -114,8 +112,8 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
             order = 6
         }
     }
-    vars.IcingaCheckStoragePool_Switchparameter_IncludePrimordial = False
-    vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = False
+    vars.IcingaCheckStoragePool_Switchparameter_IncludePrimordial = false
+    vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckCertificate" {
@@ -169,7 +167,6 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
         }
         "-Trusted" = {
             set_if = "$IcingaCheckCertificate_Switchparameter_Trusted$"
-            set_if_format = "string"
             order = 99
         }
         "-CertPaths" = {
@@ -196,7 +193,6 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
         }
         "-Recurse" = {
             set_if = "$IcingaCheckCertificate_Switchparameter_Recurse$"
-            set_if_format = "string"
             order = 99
         }
         "-CertName" = {
@@ -211,8 +207,8 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 10
         }
     }
-    vars.IcingaCheckCertificate_Switchparameter_Recurse = False
-    vars.IcingaCheckCertificate_Switchparameter_Trusted = False
+    vars.IcingaCheckCertificate_Switchparameter_Recurse = false
+    vars.IcingaCheckCertificate_Switchparameter_Trusted = false
 }
 
 object CheckCommand "Invoke-IcingaCheckICMP" {
@@ -246,7 +242,6 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
         "-IPv6" = {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv6$"
-            set_if_format = "string"
             order = 99
         }
         "-PacketSize" = {
@@ -256,7 +251,6 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckICMP_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Critical" = {
@@ -266,7 +260,6 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
         "-IPv4" = {
             set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
-            set_if_format = "string"
             order = 99
         }
         "-CriticalPl" = {
@@ -279,9 +272,9 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 0
         }
     }
-    vars.IcingaCheckICMP_Switchparameter_NoPerfData = False
-    vars.IcingaCheckICMP_Switchparameter_IPv6 = False
-    vars.IcingaCheckICMP_Switchparameter_IPv4 = False
+    vars.IcingaCheckICMP_Switchparameter_NoPerfData = false
+    vars.IcingaCheckICMP_Switchparameter_IPv6 = false
+    vars.IcingaCheckICMP_Switchparameter_IPv4 = false
 }
 
 object CheckCommand "Invoke-IcingaCheckDirectory" {
@@ -289,7 +282,7 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
 
     arguments += {
         "-Path" = {
-            description = "Used to specify a path. e.g. 'C:\Users\Icinga\Downloads'"
+            description = "Used to specify a path. e.g. 'C:\\Users\\Icinga\\Downloads'"
             value = "$IcingaCheckDirectory_String_Path$"
             order = 2
         }
@@ -309,7 +302,6 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckDirectory_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-ChangeYoungerThan" = {
@@ -364,7 +356,6 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
         "-Recurse" = {
             set_if = "$IcingaCheckDirectory_Switchparameter_Recurse$"
-            set_if_format = "string"
             order = 99
         }
         "-Warning" = {
@@ -373,8 +364,8 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
             order = 5
         }
     }
-    vars.IcingaCheckDirectory_Switchparameter_NoPerfData = False
-    vars.IcingaCheckDirectory_Switchparameter_Recurse = False
+    vars.IcingaCheckDirectory_Switchparameter_NoPerfData = false
+    vars.IcingaCheckDirectory_Switchparameter_Recurse = false
 }
 
 object CheckCommand "Invoke-IcingaCheckUptime" {
@@ -397,7 +388,6 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUptime_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Verbosity" = {
@@ -405,7 +395,7 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
             order = 4
         }
     }
-    vars.IcingaCheckUptime_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUptime_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckUpdates" {
@@ -442,11 +432,10 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckUpdates_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckPerfcounter" {
@@ -480,7 +469,6 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckPerfcounter_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-C" = {
@@ -488,7 +476,7 @@ object CheckCommand "Invoke-IcingaCheckPerfcounter" {
             order = 0
         }
     }
-    vars.IcingaCheckPerfcounter_Switchparameter_NoPerfData = False
+    vars.IcingaCheckPerfcounter_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckNLA" {
@@ -551,7 +539,6 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckMemory_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-WarningPercent" = {
@@ -560,7 +547,7 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
             order = 5
         }
     }
-    vars.IcingaCheckMemory_Switchparameter_NoPerfData = False
+    vars.IcingaCheckMemory_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckProcessCount" {
@@ -598,11 +585,10 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckProcessCount_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = False
+    vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckUsers" {
@@ -629,7 +615,6 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUsers_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Username" = {
@@ -644,7 +629,7 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
             order = 2
         }
     }
-    vars.IcingaCheckUsers_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUsers_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckDiskHealth" {
@@ -667,7 +652,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-ExcludeDisk" = {
@@ -683,7 +667,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-IgnoreReadOnlyDisks" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks$"
-            set_if_format = "string"
             order = 99
         }
         "-IncludeDisk" = {
@@ -780,7 +763,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-CheckLogicalOnly" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly$"
-            set_if_format = "string"
             order = 99
         }
         "-DiskReadByteSecCritical" = {
@@ -795,7 +777,6 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
         }
         "-IgnoreOfflineDisks" = {
             set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks$"
-            set_if_format = "string"
             order = 99
         }
         "-DiskWriteSecWarning" = {
@@ -814,10 +795,10 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 19
         }
     }
-    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = False
-    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = False
-    vars.IcingaCheckDiskHealth_Switchparameter_NoPerfData = False
-    vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = False
+    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = false
+    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = false
+    vars.IcingaCheckDiskHealth_Switchparameter_NoPerfData = false
+    vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = false
 }
 
 object CheckCommand "Invoke-IcingaCheckTimeSync" {
@@ -849,7 +830,6 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckTimeSync_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Critical" = {
@@ -869,12 +849,11 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
         }
         "-IPV4" = {
             set_if = "$IcingaCheckTimeSync_Switchparameter_IPV4$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = False
-    vars.IcingaCheckTimeSync_Switchparameter_IPV4 = False
+    vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = false
+    vars.IcingaCheckTimeSync_Switchparameter_IPV4 = false
 }
 
 object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
@@ -892,7 +871,6 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckNetworkInterface_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-LinkSpeedCrit" = {
@@ -947,7 +925,6 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
         }
         "-IncludeHidden" = {
             set_if = "$IcingaCheckNetworkInterface_Switchparameter_IncludeHidden$"
-            set_if_format = "string"
             order = 99
         }
         "-OutboundAvgBandUsageWarn" = {
@@ -1110,8 +1087,8 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
             order = 21
         }
     }
-    vars.IcingaCheckNetworkInterface_Switchparameter_IncludeHidden = False
-    vars.IcingaCheckNetworkInterface_Switchparameter_NoPerfData = False
+    vars.IcingaCheckNetworkInterface_Switchparameter_IncludeHidden = false
+    vars.IcingaCheckNetworkInterface_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckCheckSum" {
@@ -1141,11 +1118,10 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckCheckSum_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckCheckSum_Switchparameter_NoPerfData = False
+    vars.IcingaCheckCheckSum_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckScheduledTask" {
@@ -1169,7 +1145,6 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-State" = {
@@ -1189,7 +1164,7 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 4
         }
     }
-    vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = False
+    vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckBiosSerial" {
@@ -1214,7 +1189,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckEventlog_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-IncludeMessage" = {
@@ -1330,7 +1304,6 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
         }
         "-DisableTimeCache" = {
             set_if = "$IcingaCheckEventlog_Switchparameter_DisableTimeCache$"
-            set_if_format = "string"
             order = 99
         }
         "-Warning" = {
@@ -1361,8 +1334,8 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 12
         }
     }
-    vars.IcingaCheckEventlog_Switchparameter_NoPerfData = False
-    vars.IcingaCheckEventlog_Switchparameter_DisableTimeCache = False
+    vars.IcingaCheckEventlog_Switchparameter_NoPerfData = false
+    vars.IcingaCheckEventlog_Switchparameter_DisableTimeCache = false
 }
 
 object CheckCommand "Invoke-IcingaCheckCPU" {
@@ -1394,11 +1367,10 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckCPU_Switchparameter_NoPerfData = False
+    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckFirewall" {
@@ -1426,17 +1398,15 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckFirewall_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Enabled" = {
             set_if = "$IcingaCheckFirewall_Switchparameter_Enabled$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckFirewall_Switchparameter_Enabled = False
-    vars.IcingaCheckFirewall_Switchparameter_NoPerfData = False
+    vars.IcingaCheckFirewall_Switchparameter_Enabled = false
+    vars.IcingaCheckFirewall_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
@@ -1459,11 +1429,10 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
         }
         "-IgnoreEmptyChecks" = {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks$"
-            set_if_format = "string"
             order = 99
         }
         "-Include" = {
-            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\','D:\'"
+            description = "Used to specify an array of partitions to be included. If not set, the check expects that all not excluded partitions should be checked. e.g. 'C:\\','D:\\'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Include$");
                 if (len(arr) == 0) {
@@ -1480,11 +1449,10 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Exclude" = {
-            description = "Used to specify an array of partitions to be excluded. e.g. 'C:\','D:\'"
+            description = "Used to specify an array of partitions to be excluded. e.g. 'C:\\','D:\\'"
             value = {{
                 var arr = macro("$IcingaCheckUsedPartitionSpace_Array_Exclude$");
                 if (len(arr) == 0) {
@@ -1496,13 +1464,12 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
         }
         "-SkipUnknown" = {
             set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown$"
-            set_if_format = "string"
             order = 99
         }
     }
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = False
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = False
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = False
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckService" {
@@ -1521,7 +1488,6 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
         "-NoPerfData" = {
             set_if = "$IcingaCheckService_Switchparameter_NoPerfData$"
-            set_if_format = "string"
             order = 99
         }
         "-Service" = {
@@ -1551,7 +1517,7 @@ object CheckCommand "Invoke-IcingaCheckService" {
             order = 0
         }
     }
-    vars.IcingaCheckService_Switchparameter_NoPerfData = False
+    vars.IcingaCheckService_Switchparameter_NoPerfData = false
 }
 
 
