Adds new check plugin Invoke-IcingaCheckTCP

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -216,7 +216,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
 
     arguments += {
         "-WarningPl" = {
-            description = "Treshold on which the plugin will return 'WARNING' for possible packet loss in %"
+            description = "Threshold on which the plugin will return 'WARNING' for possible packet loss in %"
             value = "$IcingaCheckICMP_Object_WarningPl$"
             order = 4
         }
@@ -226,7 +226,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 6
         }
         "-Warning" = {
-            description = "Treshold on which the plugin will return 'WARNING' for the response time in ms"
+            description = "Threshold on which the plugin will return 'WARNING' for the response time in ms"
             value = "$IcingaCheckICMP_Object_Warning$"
             order = 2
         }
@@ -254,7 +254,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-Critical" = {
-            description = "Treshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_Critical$"
             order = 3
         }
@@ -263,7 +263,7 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
             order = 99
         }
         "-CriticalPl" = {
-            description = "Treshold on which the plugin will return 'CRITICAL' for the response time in ms"
+            description = "Threshold on which the plugin will return 'CRITICAL' for the response time in ms"
             value = "$IcingaCheckICMP_Object_CriticalPl$"
             order = 5
         }
@@ -436,6 +436,58 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
+}
+
+object CheckCommand "Invoke-IcingaCheckTCP" {
+    import "PowerShell Base"
+
+    arguments += {
+        "-C" = {
+            value = "try { Use-Icinga; } catch { Write-Output 'The Icinga PowerShell Framework is either not installed on the system or not configured properly. Please check https://icinga.com/docs/windows for further details'; exit 3; }; Exit-IcingaPluginNotInstalled 'Invoke-IcingaCheckTCP'; exit Invoke-IcingaCheckTCP"
+            order = 0
+        }
+        "-Verbosity" = {
+            description = "Changes the behavior of the plugin output which check states are printed: 0 (default): Only service checks/packages with state not OK will be printed 1: Only services with not OK will be printed including OK checks of affected check packages including Package config 2: Everything will be printed regardless of the check state"
+            value = "$IcingaCheckTCP_Object_Verbosity$"
+            order = 6
+        }
+        "-Warning" = {
+            description = "A warning threshold for the connection time in seconds. Allows the usage of unit additions, like 100ms.  Allowed units: ms, s, m, h, d, w, M, y"
+            value = "$IcingaCheckTCP_Object_Warning$"
+            order = 4
+        }
+        "-Address" = {
+            description = "The IP address or FQDN of the target host"
+            value = "$IcingaCheckTCP_String_Address$"
+            order = 2
+        }
+        "-Negate" = {
+            set_if = "$IcingaCheckTCP_Switchparameter_Negate$"
+            order = 99
+        }
+        "-Critical" = {
+            description = "A critical threshold for the connection time in seconds. Allows the usage of unit additions, like 100ms.  Allowed units: ms, s, m, h, d, w, M, y"
+            value = "$IcingaCheckTCP_Object_Critical$"
+            order = 5
+        }
+        "-NoPerfData" = {
+            set_if = "$IcingaCheckTCP_Switchparameter_NoPerfData$"
+            order = 99
+        }
+        "-Ports" = {
+            description = "A single or a list of ports to check on the target address"
+            value = {{
+                var arr = macro("$IcingaCheckTCP_Array_Ports$");
+                if (len(arr) == 0) {
+                return "@()";
+                }
+                return arr.join(",");
+            }}
+            order = 3
+        }
+    }
+    vars.IcingaCheckTCP_Switchparameter_Negate = false
+    vars.IcingaCheckTCP_Switchparameter_NoPerfData = false
 }
 
 object CheckCommand "Invoke-IcingaCheckPerfcounter" {
@@ -757,7 +809,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 5
         }
         "-DiskReadSecCritical" = {
-            description = "Critical treshold for disk Reads/sec is the rate of read operations on the disk."
+            description = "Critical threshold for disk Reads/sec is the rate of read operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskReadSecCritical$"
             order = 7
         }
@@ -780,7 +832,7 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 99
         }
         "-DiskWriteSecWarning" = {
-            description = "Warning theeshold for disk Writes/sec is the rate of write operations on the disk."
+            description = "Warning threshold for disk Writes/sec is the rate of write operations on the disk."
             value = "$IcingaCheckDiskHealth_Object_DiskWriteSecWarning$"
             order = 8
         }
