Improves EventLog time filter; Fixes time filter

--- a/config/icinga/Plugins_Bundle.conf
+++ b/config/icinga/Plugins_Bundle.conf
@@ -1235,7 +1235,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
 
     arguments += {
         "-Before" = {
-            description = "Used to specify a date like dd.mm.yyyy and every eventlog entry before that date will be considered."
+            description = "Used to specify time data of which point the plugin should stop considering event logs. You can either use a fixed date and time like '2021/01/30 12:00:00', a fixed day '2021/01/30' or use more dynamic approaches like '1d', '10h' and so on.  By using '2h' for example, log files of the last 2 hours will be ignored. Please ensure to manually set the `-After` argument and ensure you go back further in time with the `-After` argument than the `-Before` argument.  Allowed units: ms, s, m, h, d, w, M, y"
             value = "$IcingaCheckEventlog_Object_Before$"
             order = 16
         }
@@ -1266,7 +1266,7 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 13
         }
         "-After" = {
-            description = "Used to specify a date like dd.mm.yyyy and every eventlog entry after that date will be considered."
+            description = "Used to specify time data of which point the plugin should start to read event logs from. You can either use a fixed date and time like '2021/01/30 12:00:00', a fixed day '2021/01/30' or use more dynamic approaches like '1d', '10h' and so on.  Allowed units: ms, s, m, h, d, w, M, y"
             value = "$IcingaCheckEventlog_Object_After$"
             order = 15
         }
